<resources>
    <string name="app_name">Android_Font_Awesome_Example</string>
    <string name="font_awesome_example">Font Awesome Example</string>
    <string name="text_Regular">Regular</string>
    <string name="text_Solid">Solid</string>
    <string name="text_Brand">Brand</string>
    <string name="fa_address_book">\uf2b9</string>
    <string name="fa_address_card">\uf2bb</string>
    <string name="fa_angry">\uf556</string>
    <string name="fa_arrow_alt_circle_down">\uf358</string>
    <string name="fa_arrow_alt_circle_left">\uf359</string>
    <string name="fa_arrow_alt_circle_right">\uf35a</string>
    <string name="fa_arrow_alt_circle_up">\uf35b</string>
    <string name="fa_bell">\uf0f3</string>
    <string name="fa_bell_slash">\uf1f6</string>
    <string name="fa_bookmark">\uf02e</string>
    <string name="fa_building">\uf1ad</string>
    <string name="fa_calendar">\uf133</string>
    <string name="fa_calendar_alt">\uf073</string>
    <string name="fa_calendar_check">\uf274</string>
    <string name="fa_calendar_minus">\uf272</string>
    <string name="fa_calendar_plus">\uf271</string>
    <string name="fa_calendar_times">\uf273</string>
    <string name="fa_caret_square_down">\uf150</string>
    <string name="fa_caret_square_left">\uf191</string>
    <string name="fa_caret_square_right">\uf152</string>
    <string name="fa_caret_square_up">\uf151</string>
    <string name="fa_chart_bar">\uf080</string>
    <string name="fa_check_circle">\uf058</string>
    <string name="fa_check_square">\uf14a</string>
    <string name="fa_circle">\uf111</string>
    <string name="fa_clipboard">\uf328</string>
    <string name="fa_clock">\uf017</string>
    <string name="fa_clone">\uf24d</string>
    <string name="fa_closed_captioning">\uf20a</string>
    <string name="fa_comment">\uf075</string>
    <string name="fa_comment_alt">\uf27a</string>
    <string name="fa_comment_dots">\uf4ad</string>
    <string name="fa_comments">\uf086</string>
    <string name="fa_compass">\uf14e</string>
    <string name="fa_copy">\uf0c5</string>
    <string name="fa_copyright">\uf1f9</string>
    <string name="fa_credit_card">\uf09d</string>
    <string name="fa_dizzy">\uf567</string>
    <string name="fa_dot_circle">\uf192</string>
    <string name="fa_edit">\uf044</string>
    <string name="fa_envelope">\uf0e0</string>
    <string name="fa_envelope_open">\uf2b6</string>
    <string name="fa_eye">\uf06e</string>
    <string name="fa_eye_slash">\uf070</string>
    <string name="fa_file">\uf15b</string>
    <string name="fa_file_alt">\uf15c</string>
    <string name="fa_file_archive">\uf1c6</string>
    <string name="fa_file_audio">\uf1c7</string>
    <string name="fa_file_code">\uf1c9</string>
    <string name="fa_file_excel">\uf1c3</string>
    <string name="fa_file_image">\uf1c5</string>
    <string name="fa_file_pdf">\uf1c1</string>
    <string name="fa_file_powerpoint">\uf1c4</string>
    <string name="fa_file_video">\uf1c8</string>
    <string name="fa_file_word">\uf1c2</string>
    <string name="fa_flag">\uf024</string>
    <string name="fa_flushed">\uf579</string>
    <string name="fa_folder">\uf07b</string>
    <string name="fa_folder_open">\uf07c</string>
    <string name="fa_frown">\uf119</string>
    <string name="fa_frown_open">\uf57a</string>
    <string name="fa_futbol">\uf1e3</string>
    <string name="fa_gem">\uf3a5</string>
    <string name="fa_grimace">\uf57f</string>
    <string name="fa_grin">\uf580</string>
    <string name="fa_grin_alt">\uf581</string>
    <string name="fa_grin_beam">\uf582</string>
    <string name="fa_grin_beam_sweat">\uf583</string>
    <string name="fa_grin_hearts">\uf584</string>
    <string name="fa_grin_squint">\uf585</string>
    <string name="fa_grin_squint_tears">\uf586</string>
    <string name="fa_grin_stars">\uf587</string>
    <string name="fa_grin_tears">\uf588</string>
    <string name="fa_grin_tongue">\uf589</string>
    <string name="fa_grin_tongue_squint">\uf58a</string>
    <string name="fa_grin_tongue_wink">\uf58b</string>
    <string name="fa_grin_wink">\uf58c</string>
    <string name="fa_hand_lizard">\uf258</string>
    <string name="fa_hand_paper">\uf256</string>
    <string name="fa_hand_peace">\uf25b</string>
    <string name="fa_hand_point_down">\uf0a7</string>
    <string name="fa_hand_point_left">\uf0a5</string>
    <string name="fa_hand_point_right">\uf0a4</string>
    <string name="fa_hand_point_up">\uf0a6</string>
    <string name="fa_hand_pointer">\uf25a</string>
    <string name="fa_hand_rock">\uf255</string>
    <string name="fa_hand_scissors">\uf257</string>
    <string name="fa_hand_spock">\uf259</string>
    <string name="fa_handshake">\uf2b5</string>
    <string name="fa_hdd">\uf0a0</string>
    <string name="fa_heart">\uf004</string>
    <string name="fa_hospital">\uf0f8</string>
    <string name="fa_hourglass">\uf254</string>
    <string name="fa_id_badge">\uf2c1</string>
    <string name="fa_id_card">\uf2c2</string>
    <string name="fa_image">\uf03e</string>
    <string name="fa_images">\uf302</string>
    <string name="fa_keyboard">\uf11c</string>
    <string name="fa_kiss">\uf596</string>
    <string name="fa_kiss_beam">\uf597</string>
    <string name="fa_kiss_wink_heart">\uf598</string>
    <string name="fa_laugh">\uf599</string>
    <string name="fa_laugh_beam">\uf59a</string>
    <string name="fa_laugh_squint">\uf59b</string>
    <string name="fa_laugh_wink">\uf59c</string>
    <string name="fa_lemon">\uf094</string>
    <string name="fa_life_ring">\uf1cd</string>
    <string name="fa_lightbulb">\uf0eb</string>
    <string name="fa_list_alt">\uf022</string>
    <string name="fa_map">\uf279</string>
    <string name="fa_meh">\uf11a</string>
    <string name="fa_meh_blank">\uf5a4</string>
    <string name="fa_meh_rolling_eyes">\uf5a5</string>
    <string name="fa_minus_square">\uf146</string>
    <string name="fa_money_bill_alt">\uf3d1</string>
    <string name="fa_moon">\uf186</string>
    <string name="fa_newspaper">\uf1ea</string>
    <string name="fa_object_group">\uf247</string>
    <string name="fa_object_ungroup">\uf248</string>
    <string name="fa_paper_plane">\uf1d8</string>
    <string name="fa_pause_circle">\uf28b</string>
    <string name="fa_play_circle">\uf144</string>
    <string name="fa_plus_square">\uf0fe</string>
    <string name="fa_question_circle">\uf059</string>
    <string name="fa_registered">\uf25d</string>
    <string name="fa_sad_cry">\uf5b3</string>
    <string name="fa_sad_tear">\uf5b4</string>
    <string name="fa_save">\uf0c7</string>
    <string name="fa_share_square">\uf14d</string>
    <string name="fa_smile">\uf118</string>
    <string name="fa_smile_beam">\uf5b8</string>
    <string name="fa_smile_wink">\uf4da</string>
    <string name="fa_snowflake">\uf2dc</string>
    <string name="fa_square">\uf0c8</string>
    <string name="fa_star">\uf005</string>
    <string name="fa_star_half">\uf089</string>
    <string name="fa_sticky_note">\uf249</string>
    <string name="fa_stop_circle">\uf28d</string>
    <string name="fa_sun">\uf185</string>
    <string name="fa_surprise">\uf5c2</string>
    <string name="fa_thumbs_down">\uf165</string>
    <string name="fa_thumbs_up">\uf164</string>
    <string name="fa_times_circle">\uf057</string>
    <string name="fa_tired">\uf5c8</string>
    <string name="fa_trash_alt">\uf2ed</string>
    <string name="fa_user">\uf007</string>
    <string name="fa_user_circle">\uf2bd</string>
    <string name="fa_window_close">\uf410</string>
    <string name="fa_window_maximize">\uf2d0</string>
    <string name="fa_window_minimize">\uf2d1</string>
    <string name="fa_window_restore">\uf2d2</string>
    <string name="fa_ad_solid">\uf641</string>
    <string name="fa_address_book_solid">\uf2b9</string>
    <string name="fa_address_card_solid">\uf2bb</string>
    <string name="fa_adjust_solid">\uf042</string>
    <string name="fa_air_freshener_solid">\uf5d0</string>
    <string name="fa_align_center_solid">\uf037</string>
    <string name="fa_align_justify_solid">\uf039</string>
    <string name="fa_align_left_solid">\uf036</string>
    <string name="fa_align_right_solid">\uf038</string>
    <string name="fa_allergies_solid">\uf461</string>
    <string name="fa_ambulance_solid">\uf0f9</string>
    <string name="fa_american_sign_language_interpreting_solid">\uf2a3</string>
    <string name="fa_anchor_solid">\uf13d</string>
    <string name="fa_angle_double_down_solid">\uf103</string>
    <string name="fa_angle_double_left_solid">\uf100</string>
    <string name="fa_angle_double_right_solid">\uf101</string>
    <string name="fa_angle_double_up_solid">\uf102</string>
    <string name="fa_angle_down_solid">\uf107</string>
    <string name="fa_angle_left_solid">\uf104</string>
    <string name="fa_angle_right_solid">\uf105</string>
    <string name="fa_angle_up_solid">\uf106</string>
    <string name="fa_angry_solid">\uf556</string>
    <string name="fa_ankh_solid">\uf644</string>
    <string name="fa_apple_alt_solid">\uf5d1</string>
    <string name="fa_archive_solid">\uf187</string>
    <string name="fa_archway_solid">\uf557</string>
    <string name="fa_arrow_alt_circle_down_solid">\uf358</string>
    <string name="fa_arrow_alt_circle_left_solid">\uf359</string>
    <string name="fa_arrow_alt_circle_right_solid">\uf35a</string>
    <string name="fa_arrow_alt_circle_up_solid">\uf35b</string>
    <string name="fa_arrow_circle_down_solid">\uf0ab</string>
    <string name="fa_arrow_circle_left_solid">\uf0a8</string>
    <string name="fa_arrow_circle_right_solid">\uf0a9</string>
    <string name="fa_arrow_circle_up_solid">\uf0aa</string>
    <string name="fa_arrow_down_solid">\uf063</string>
    <string name="fa_arrow_left_solid">\uf060</string>
    <string name="fa_arrow_right_solid">\uf061</string>
    <string name="fa_arrow_up_solid">\uf062</string>
    <string name="fa_arrows_alt_solid">\uf0b2</string>
    <string name="fa_arrows_alt_h_solid">\uf337</string>
    <string name="fa_arrows_alt_v_solid">\uf338</string>
    <string name="fa_assistive_listening_systems_solid">\uf2a2</string>
    <string name="fa_asterisk_solid">\uf069</string>
    <string name="fa_at_solid">\uf1fa</string>
    <string name="fa_atlas_solid">\uf558</string>
    <string name="fa_atom_solid">\uf5d2</string>
    <string name="fa_audio_description_solid">\uf29e</string>
    <string name="fa_award_solid">\uf559</string>
    <string name="fa_baby_solid">\uf77c</string>
    <string name="fa_baby_carriage_solid">\uf77d</string>
    <string name="fa_backspace_solid">\uf55a</string>
    <string name="fa_backward_solid">\uf04a</string>
    <string name="fa_bacon_solid">\uf7e5</string>
    <string name="fa_balance_scale_solid">\uf24e</string>
    <string name="fa_balance_scale_left_solid">\uf515</string>
    <string name="fa_balance_scale_right_solid">\uf516</string>
    <string name="fa_ban_solid">\uf05e</string>
    <string name="fa_band_aid_solid">\uf462</string>
    <string name="fa_barcode_solid">\uf02a</string>
    <string name="fa_bars_solid">\uf0c9</string>
    <string name="fa_baseball_ball_solid">\uf433</string>
    <string name="fa_basketball_ball_solid">\uf434</string>
    <string name="fa_bath_solid">\uf2cd</string>
    <string name="fa_battery_empty_solid">\uf244</string>
    <string name="fa_battery_full_solid">\uf240</string>
    <string name="fa_battery_half_solid">\uf242</string>
    <string name="fa_battery_quarter_solid">\uf243</string>
    <string name="fa_battery_three_quarters_solid">\uf241</string>
    <string name="fa_bed_solid">\uf236</string>
    <string name="fa_beer_solid">\uf0fc</string>
    <string name="fa_bell_solid">\uf0f3</string>
    <string name="fa_bell_slash_solid">\uf1f6</string>
    <string name="fa_bezier_curve_solid">\uf55b</string>
    <string name="fa_bible_solid">\uf647</string>
    <string name="fa_bicycle_solid">\uf206</string>
    <string name="fa_dragon_solid">\uf6d5</string>
    <string name="fa_twitch_brand">\uf1e8</string>
</resources>