<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/title"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/font_awesome_example"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Regular"
        style="@style/caption_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/text_Regular"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/fa_icon_regular"
        app:layout_constraintEnd_toStartOf="@+id/fa_icon_solid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/tv_Solid"
        style="@style/caption_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/text_Solid"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/fa_icon_solid"
        app:layout_constraintEnd_toStartOf="@+id/tv_Brand"
        app:layout_constraintStart_toEndOf="@+id/tv_Regular"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/tv_Brand"
        style="@style/caption_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/text_Brand"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/fa_icon_brand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fa_icon_solid"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/fa_icon_regular"
        style="@style/fa_icon_style"
        android:fontFamily="@font/fa_regular"
        android:text="@string/fa_lightbulb"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fa_icon_solid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/fa_icon_solid"
        style="@style/fa_icon_style"
        android:fontFamily="@font/fa_solid"
        android:text="@string/fa_dragon_solid"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fa_icon_brand"
        app:layout_constraintStart_toEndOf="@+id/fa_icon_regular"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/fa_icon_brand"
        style="@style/fa_icon_style"
        android:fontFamily="@font/fa_brands"
        android:text="@string/fa_twitch_brand"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fa_icon_solid"
        app:layout_constraintTop_toBottomOf="@+id/title" />

</android.support.constraint.ConstraintLayout>